cmake_minimum_required(VERSION 3.0)
include_directories("C:/MINGW/include")
include_directories("C:/msys64/mingw64/include/gsl")
set(CMAKE_PREFIX_PATH "C:/msys64/mingw64/")
project(project C)
find_package(GSL REQUIRED)
include_directories(${GSL_INCLUDE_DIRS})
set(GSL_INCLUDE_DIR "C:/msys64/mingw64/include")
set(GSL_LIBRARY "C:/msys64/mingw64/lib/libgsl.dll.a")
set(GSL_CBLAS_LIBRARY "C:/msys64/mingw64/lib/libgslcblas.dll.a")
if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
  set(CMAKE_TOOLCHAIN_FILE "C:/Users/Zheny/Desktop/Develop/C/vcpkg/scripts/buildsystems/vcpkg.cmake" CACHE STRING "Vcpkg toolchain file")
endif()
set(VCPKG_TARGET_TRIPLET "x64-windows" CACHE STRING "Vcpkg target triplet")

# set(CMAKE_TOOLCHAIN_FILE "C:/Users/Zheny/Desktop/Develop/C/vcpkg/scripts/buildsystems/vcpkg.cmake" CACHE STRING "")
add_executable(project main.c)
target_link_libraries(project PRIVATE GSL::gsl GSL::gslcblas)
# target_link_libraries(project ${GSL_LIBRARIES})